@@ -6,7 +6,7 @@ Pygame Readme Information
 <font size=+5><b>Pygame Readme</b></font>
 </td></tr><tr><td align=left width=33%><big>
 
-Version 1.9.0release
+Version 1.9.2pre
 
 
 </td><td align=center width=34%><big>
