@@ -150,6 +150,9 @@ PyObject* list_cameras (PyObject* self, PyObject* arg)
     free(devices);
     
     return ret_list;
+#elif defined(__APPLE__)
+    /* Hier komt apple gedoe... */
+    Py_RETURN_NONE;
 #else
 	Py_RETURN_NONE;
 #endif
